chore: update manifest to v3

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
+	"manifest_version": 3,
 	"name": "Tab Limiter",
+	"version": "0.3.1",
 	"description": "Limit the number of open tabs – in total and per window",
-	"version": "0.3.0",
+
 	"author": "Matthias Vogt",
 	"homepage_url": "https://github.com/matthias-vogt/tab-limiter",
-
 	"icons": {
 		"48": "icons/48.png",
 		"128": "icons/128.png"
 	},
-
-	"browser_action": {
+	"action": {
 		"default_icon": {
 			"48": "icons/48.png",
 			"128": "icons/128.png"
@@ -18,15 +18,14 @@
 		"default_popup": "options.html",
 		"default_title": "Tab Limiter"
 	},
-	"options_page": "options.html",
+	"options_ui": {
+		"page": "options.html",
+		"open_in_tab": false
+	},
 	"background": {
-		"scripts": [
-			"background.js"
-		]
+		"service_worker": "background.js"
 	},
 	"permissions": [
 		"storage"
-	],
-
-	"manifest_version": 2
+	]
 }
