--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"manifest_version": 3,
-	"name": "Tab Limiter",
+	"name": "The Tab Limiter",
 	"version": "0.3.1",
 	"description": "Limit the number of open tabs – in total and per window",
 
-	"author": "Matthias Vogt",
-	"homepage_url": "https://github.com/matthias-vogt/tab-limiter",
+	"author": "Rogerio Angeliski",
+	"homepage_url": "https://github.com/angeliski/tab-limiter",
 	"icons": {
 		"48": "icons/48.png",
 		"128": "icons/128.png"
